--- a/index.html
+++ b/index.html
@@ -85,21 +85,21 @@
             <div class="mb-16">
                 <h3 class="text-2xl font-semibold text-gray-800 mb-6">🎯 Gợi ý nhanh</h3>
                 <div class="flex flex-wrap justify-center gap-4">
-                    <button class="bg-red-100 text-red-600 px-6 py-3 rounded-full hover:bg-red-200 transition-colors">
+                    <a href="/birthday/" class="bg-red-100 text-red-600 px-6 py-3 rounded-full hover:bg-red-200 transition-colors">
                         ❤️ Valentine (14/2)
-                    </button>
-                    <button class="bg-pink-100 text-pink-600 px-6 py-3 rounded-full hover:bg-pink-200 transition-colors">
+                    </a>
+                    <a href="/birthday/" class="bg-pink-100 text-pink-600 px-6 py-3 rounded-full hover:bg-pink-200 transition-colors">
                         🌸 Ngày Phụ nữ (8/3)
-                    </button>
-                    <button class="bg-purple-100 text-purple-600 px-6 py-3 rounded-full hover:bg-purple-200 transition-colors">
+                    </a>
+                    <a href="/birthday/" class="bg-purple-100 text-purple-600 px-6 py-3 rounded-full hover:bg-purple-200 transition-colors">
                         🎂 Sinh nhật
-                    </button>
-                    <button class="bg-green-100 text-green-600 px-6 py-3 rounded-full hover:bg-green-200 transition-colors">
+                    </a>
+                    <a href="/birthday/" class="bg-green-100 text-green-600 px-6 py-3 rounded-full hover:bg-green-200 transition-colors">
                         🎅 Giáng sinh
-                    </button>
-                    <button class="bg-yellow-100 text-yellow-600 px-6 py-3 rounded-full hover:bg-yellow-200 transition-colors">
+                    </a>
+                    <a href="/birthday/" class="bg-yellow-100 text-yellow-600 px-6 py-3 rounded-full hover:bg-yellow-200 transition-colors">
                         🧧 Tết Nguyên Đán
-                    </button>
+                    </a>
                 </div>
             </div>
         </div>
