--- a/cart/index.html
+++ b/cart/index.html
@@ -63,12 +63,12 @@
                 </div>
                 <div class="flex justify-between">
                     <span class="text-gray-600">Phí gói quà & vận chuyển</span>
-                    <span class="font-medium">15.000₫</span>
+                    <span id="fee" class="font-medium">100.000₫</span>
                 </div>
                 <div class="border-t border-gray-200 pt-3">
                     <div class="flex justify-between">
                     <span class="text-lg font-semibold">Tổng cộng</span>
-                    <span id="final-total" class="text-lg font-bold text-pink-600">15.000₫</span>
+                    <span id="final-total" class="text-lg font-bold text-pink-600">100.000₫</span>
                     </div>
                 </div>
                 </div>
@@ -206,9 +206,8 @@
                 <div>
                     <h5 class="font-semibold mb-4">Liên hệ</h5>
                     <div class="space-y-2 text-gray-300">
-                        <p>📧 hello@tiamo.vn</p>
-                        <p>📞 1900 1234</p>
-                        <p>💬 Zalo: 0901234567</p>
+                        <p>📧 ngocdieu8607@gmail.com</p>
+                        <p>💬 Zalo: 0862958110</p>
                     </div>
                 </div>
                 
@@ -224,10 +223,14 @@
                 <div>
                     <h5 class="font-semibold mb-4">Theo dõi chúng tôi</h5>
                     <div class="flex space-x-4">
-                        <a href="#" class="text-2xl hover:text-pink-400 transition-colors">📘</a>
-                        <a href="#" class="text-2xl hover:text-pink-400 transition-colors">📷</a>
-                        <a href="#" class="text-2xl hover:text-pink-400 transition-colors">🎵</a>
+                        <a href="https://www.facebook.com/people/Tiamo/61582548893661/" class="text-2xl hover:text-pink-400 transition-colors">
+                            <i class="fa-brands fa-facebook"></i>
+                        </a>
+                        <a href="https://www.tiktok.com/@tiaomo.id.vn" class="text-2xl hover:text-pink-400 transition-colors">
+                            <i class="fa-brands fa-tiktok"></i>
+                        </a>
                     </div>
+                    <img  class="mt-3.5" src="https://visitcountpro.netlify.app/api?id=Tiamo&label=Tiamo%20Visitors&color=12&icon=7&pretty=false" />
                 </div>
             </div>
             
