--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tiamo - Trao quà, Gửi yêu thương</title>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="./assets/css/style.css">
+    <link rel="stylesheet" href="../assets/css/base.css">
     <link rel="stylesheet" href="./assets/css/tailwind.css">
     <link rel="shortcut icon" href="./assets/img/favicon.png" type="image/x-icon">
     <script src="https://cdn.tailwindcss.com"></script>
@@ -62,49 +62,63 @@
     </header>
 
     <!-- Hero Banner -->
-    <section id="home" class="py-16 px-4">
-        <div class="max-w-7xl mx-auto text-center">
-            <h2 class="text-5xl font-bold text-gray-800 mb-6 mt-6">
-                Trao quà – Gửi yêu thương 💕
-            </h2>
-            <p class="text-xl text-gray-600 mb-8 max-w-2xl mx-auto">
-                Khám phá hàng ngàn món quà ý nghĩa, được chọn lọc kỹ càng để gửi gắm tình cảm đến những người bạn yêu thương
-            </p>
-            
-            <!-- Search Bar -->
-            <div class="search-bar max-w-2xl mx-auto rounded-full p-2 shadow-lg mb-12">
-                <div class="flex items-center">
-                    <input type="text" placeholder="Tìm quà cho người bạn yêu thương..." 
-                           class="flex-1 px-6 py-3 bg-transparent outline-none text-gray-700">
-                    <button class="btn-primary text-white px-8 py-3 rounded-full font-medium">
-                        <i class="fa-solid fa-magnifying-glass"></i>
-                    </button>
-                </div>
-            </div>
+    <section id="home" class="relative w-full min-h-screen flex items-center justify-center overflow-hidden">
 
-            <!-- Quick Suggestions -->
-            <div class="mb-16">
-                <h3 class="text-2xl font-semibold text-gray-800 mb-6">🎯 Gợi ý nhanh</h3>
-                <div class="flex flex-wrap justify-center gap-4">
-                    <a href="/birthday/" class="bg-red-100 text-red-600 px-6 py-3 rounded-full hover:bg-red-200 transition-colors">
-                        ❤️ Valentine (14/2)
-                    </a>
-                    <a href="/birthday/" class="bg-pink-100 text-pink-600 px-6 py-3 rounded-full hover:bg-pink-200 transition-colors">
-                        🌸 Ngày Phụ nữ (8/3)
-                    </a>
-                    <a href="/birthday/" class="bg-purple-100 text-purple-600 px-6 py-3 rounded-full hover:bg-purple-200 transition-colors">
-                        🎂 Sinh nhật
-                    </a>
-                    <a href="/birthday/" class="bg-green-100 text-green-600 px-6 py-3 rounded-full hover:bg-green-200 transition-colors">
-                        🎅 Giáng sinh
-                    </a>
-                    <a href="/birthday/" class="bg-yellow-100 text-yellow-600 px-6 py-3 rounded-full hover:bg-yellow-200 transition-colors">
-                        🧧 Tết Nguyên Đán
-                    </a>
-                </div>
-            </div>
+    <!-- Background SVG -->
+    <object 
+        type="image/svg+xml" 
+        data="https://cdn.svgator.com/images/2022/06/svg-texture-background-geometric.svg"
+        class="absolute inset-0 w-full h-full object-cover -z-10 scale-150">
+    </object>
+
+    <!-- Overlay làm mờ nền (để text dễ đọc hơn) -->
+    <div class="absolute inset-0 bg-white/70 backdrop-blur-sm -z-10"></div>
+
+    <!-- Nội dung chính -->
+    <div class="text-center px-6 max-w-5xl relative z-10">
+        <h2 class="text-5xl font-bold text-gray-800 mb-6 mt-6">
+        Trao quà – Gửi yêu thương 💕
+        </h2>
+        <p class="text-xl text-gray-700 mb-8 max-w-2xl mx-auto">
+        Khám phá hàng ngàn món quà ý nghĩa, được chọn lọc kỹ càng để gửi gắm tình cảm đến những người bạn yêu thương
+        </p>
+
+        <!-- Search Bar -->
+        <div class="search-bar max-w-2xl mx-auto rounded-full p-2 shadow-lg mb-12 bg-white">
+        <div class="flex items-center">
+            <input type="text" placeholder="Tìm quà cho người bạn yêu thương..." 
+                class="flex-1 px-6 py-3 bg-transparent outline-none text-gray-700">
+            <button class="btn-primary text-white px-8 py-3 rounded-full font-medium bg-pink-500 hover:bg-pink-600 transition">
+            <i class="fa-solid fa-magnifying-glass"></i>
+            </button>
         </div>
+        </div>
+
+        <!-- Quick Suggestions -->
+        <div class="mb-16">
+        <h3 class="text-2xl font-semibold text-gray-800 mb-6">🎯 Gợi ý nhanh</h3>
+        <div class="flex flex-wrap justify-center gap-4">
+            <a href="/valentine/" class="bg-red-100 text-red-600 px-6 py-3 rounded-full hover:bg-red-200 transition-colors">
+            ❤️ Valentine (14/2)
+            </a>
+            <a href="/womenday/" class="bg-pink-100 text-pink-600 px-6 py-3 rounded-full hover:bg-pink-200 transition-colors">
+            🌸 Ngày Phụ nữ (8/3)
+            </a>
+            <a href="/birthday/" class="bg-purple-100 text-purple-600 px-6 py-3 rounded-full hover:bg-purple-200 transition-colors">
+            🎂 Sinh nhật
+            </a>
+            <a href="/christmas/" class="bg-green-100 text-green-600 px-6 py-3 rounded-full hover:bg-green-200 transition-colors">
+            🎅 Giáng sinh
+            </a>
+            <a href="/tetholiday/" class="bg-yellow-100 text-yellow-600 px-6 py-3 rounded-full hover:bg-yellow-200 transition-colors">
+            🧧 Tết Nguyên Đán
+            </a>
+        </div>
+        </div>
+    </div>
+
     </section>
+
 
     <!-- Flash Sale -->
     <section class="py-12 px-4 bg-gradient-to-r from-pink-50 to-rose-50">
@@ -211,42 +225,42 @@
                     <div class="text-6xl mb-4">❤️</div>
                     <h4 class="text-xl font-semibold text-gray-800 mb-3">Valentine's Day</h4>
                     <p class="text-gray-600 mb-4">Quà tặng cho người yêu, hộp hoa, thiệp, gấu bông, chocolate ngọt ngào</p>
-                    <button class="btn-primary text-white px-6 py-2 rounded-full">Khám phá ngay</button>
+                    <a href="/valentine/" class="btn-primary text-white px-6 py-2 rounded-full">Khám phá ngay</a>
                 </div>
 
                 <div class="category-card rounded-2xl p-8 card-hover text-center">
                     <div class="text-6xl mb-4">🎂</div>
                     <h4 class="text-xl font-semibold text-gray-800 mb-3">Sinh nhật</h4>
                     <p class="text-gray-600 mb-4">Quà sinh nhật đặc biệt cho bạn bè, người yêu và gia đình thân yêu</p>
-                    <button class="btn-primary text-white px-6 py-2 rounded-full">Khám phá ngay</button>
+                    <a href="/birthday/" class="btn-primary text-white px-6 py-2 rounded-full">Khám phá ngay</a>
                 </div>
 
                 <div class="category-card rounded-2xl p-8 card-hover text-center">
                     <div class="text-6xl mb-4">🌸</div>
                     <h4 class="text-xl font-semibold text-gray-800 mb-3">20/10 & 8/3</h4>
                     <p class="text-gray-600 mb-4">Quà tặng phái đẹp: nước hoa, hộp quà handmade, set skincare cao cấp</p>
-                    <button class="btn-primary text-white px-6 py-2 rounded-full">Khám phá ngay</button>
+                    <a href="/womenday/" class="btn-primary text-white px-6 py-2 rounded-full">Khám phá ngay</a>
                 </div>
 
                 <div class="category-card rounded-2xl p-8 card-hover text-center">
                     <div class="text-6xl mb-4">🎅</div>
                     <h4 class="text-xl font-semibold text-gray-800 mb-3">Giáng sinh</h4>
                     <p class="text-gray-600 mb-4">Quà mùa lễ hội, phụ kiện, tất Noel, nến thơm, đồ decor ấm cúng</p>
-                    <button class="btn-primary text-white px-6 py-2 rounded-full">Khám phá ngay</button>
+                    <a href="/christmas/" class="btn-primary text-white px-6 py-2 rounded-full">Khám phá ngay</a>
                 </div>
 
                 <div class="category-card rounded-2xl p-8 card-hover text-center">
                     <div class="text-6xl mb-4">🧧</div>
                     <h4 class="text-xl font-semibold text-gray-800 mb-3">Tết & Năm mới</h4>
                     <p class="text-gray-600 mb-4">Hộp quà Tết, trà cao cấp, bánh kẹo, quà biếu sang trọng</p>
-                    <button class="btn-primary text-white px-6 py-2 rounded-full">Khám phá ngay</button>
+                    <a href="/tetholiday/" class="btn-primary text-white px-6 py-2 rounded-full">Khám phá ngay</a>
                 </div>
 
                 <div class="category-card rounded-2xl p-8 card-hover text-center">
                     <div class="text-6xl mb-4">💍</div>
                     <h4 class="text-xl font-semibold text-gray-800 mb-3">Kỷ niệm</h4>
                     <p class="text-gray-600 mb-4">Quà tặng cặp đôi, vòng tay, album ảnh, thiệp khắc tên đầy ý nghĩa</p>
-                    <button class="btn-primary text-white px-6 py-2 rounded-full">Khám phá ngay</button>
+                    <a href="/valentine/" class="btn-primary text-white px-6 py-2 rounded-full">Khám phá ngay</a>
                 </div>
             </div>
         </div>
@@ -469,12 +483,6 @@
             </div>
         </div>
     </footer>
-    <!-- <iframe
-        src="https://www.chatbase.co/chatbot-iframe/O4MQXQOdgrzSnRr3GpjuB"
-        width="100%"
-        style="height: 100%; min-height: 700px"
-        frameborder="0"
-    ></iframe> -->
     <script>
         // Countdown timer for flash sale
         function updateCountdown() {
