--- a/cart/index.html
+++ b/cart/index.html
@@ -65,7 +65,7 @@
                     <span id="items-subtotal" class="font-medium">0₫</span>
                 </div>
                 <div class="flex justify-between">
-                    <span class="text-gray-600">Ưu đãi Tiamo (5%)</span>
+                    <span class="text-gray-600">Ưu đãi Tiamo (2%)</span>
                     <span id="items-discount" class="text-pink-600">-0₫</span>
                 </div>
                 <div class="flex justify-between">
@@ -86,7 +86,7 @@
 
                 
                 <div class="text-center">
-                <p class="text-sm text-gray-500">🎀 Miễn phí gói quà & thiệp chúc</p>
+                <p class="text-sm text-gray-500">🎀 Miễn phí thiệp chúc</p>
                 <p class="text-sm text-gray-500">💌 Tiamo – gửi yêu thương trọn vẹn</p>
                 </div>
             </div>
