--- a/index.html
+++ b/index.html
@@ -76,9 +76,7 @@
     </header>
     <!-- Hero Banner -->
     <section id="home" 
-        class="relative w-full min-h-screen flex items-center justify-center overflow-hidden bg-center bg-cover bg-no-repeat"
-        style="background-image: url('https://cdn.svgator.com/images/2022/06/svg-texture-background-geometric.svg'); background-size: 110%;">
-
+    class="relative w-full min-h-screen flex items-center justify-center overflow-hidden bg-pink-200 bg-center bg-cover bg-no-repeat md:bg-[url('https://cdn.svgator.com/images/2022/06/svg-texture-background-geometric.svg')] md:bg-[length:110%] md:bg-center md:bg-no-repeat">
         <!-- Overlay làm mờ nền tổng thể -->
         <div class="absolute inset-0 bg-white/70 backdrop-blur-sm -z-10"></div>
 
